# Reviser

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/baselines/: ar_100m.yaml  ar_300m.yaml  mdlm_170m.yaml  sedd_169m.yaml  sedd_353m.yaml
configs/reviser/: 100m.yaml  300m.yaml
data/: README.md
data/manifests/: c4_eval_prompts.json  released_artifacts.json
docs/: artifact_index.md  experiment_protocol.md  limitations.md  metrics.md  reproducibility.md
docs/model_cards/: reviser_100m.md  reviser_300m.md
environment/: conda_env.yml  pip_requirements.txt  system_versions.md
paper/: build_paper.ps1  build_paper.sh  latexmkrc  main.tex  references.bib
results/arena/: ar_benchmark_v3_summary.json  reviser_vs_diffusion_multijudge_summary.json
results/evalppl/: gpt2base_evalppl_dream3k_summary.json
results/flops/: summary.json
results/mauve/: bert_pseudologlik_mauve_3000.json
results/trajectory_stats/: bpc_suite_3k.json
scripts/: __init__.py  _common.py
scripts/eval/: make_paper_tables.py  run_arena.py  run_evalppl.py  run_flops_accounting.py  run_mauve.py  run_trajectory_stats.py
scripts/inference/: run_baseline_rollout.py  run_reviser_rollout.py
scripts/paper/: build_trajectory_html.py  export_top_samples.py  generate_html_from_inference_examples_txt.py
scripts/release/: build_release_bundle.py
scripts/train/: train_ar_baseline.py  train_reviser.py
src/: rl_helpers.py  training_metrics_dashboard.py
src/data/: __init__.py  (+13 more)
visualizations/: inference_examples_100M.html  inference_examples_300M.html
(+45 files in other folders)
