[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reviser-paper"
version = "0.1.0"
description = "Public paper and reproduction repository for Reviser."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Sean Diab"},
]
dependencies = [
  "torch",
  "transformers>=4.51.3",
  "numpy",
  "pyyaml",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
